2013-04-26  Geoff Pike  <gpike@chromium.org>

	* gold.cc (queue_final_tasks): invoke layout->queue_build_id_tasks().
	* layout.cc (Hash_task): New class.
	(Layout::queue_build_id_tasks): New function.
	(Layout::write_build_id): Handle single-thread portion of build ID
	computation.  (In some cases, all of it is single-threaded.)  Replace
	{sha1,md5}_process_bytes with {sha1,md5}_buffer to get the same
	functionality in fewer lines of code.
	* layout.h (Layout::queue_build_id_tasks): New function declaration.
	* options.h (General_options): make "--build-id" default to tree
	rather than sha1.  Add two new options related to --build-id=tree:
	--build-id-chunk-size-for-treehash and
	--build-id-min-file-size-for-treehash.
	* Makefile.am: add testing of --build-id=tree and related new options
	(these tests will be invoked by "make check").
	* Makefile.in: Regenerate.

2013-04-25  Alan Modra  <amodra@gmail.com>

	* configure.tgt: Add powerpcle and powerpc64le.

2013-04-22  Alan Modra  <amodra@gmail.com>

	PR gold/15355
	* layout.cc (Layout::segment_precedes): Allow more than one
	segment with the same type and flags.

2013-04-15  Cary Coutant  <ccoutant@google.com>

	* layout.cc (Layout::set_relocatable_section_offsets): Don't
	allocate space in file for BSS sections.

2013-04-15  Cary Coutant  <ccoutant@google.com>

	* script-sections.cc (Orphan_output_section): Reset address
	to zero after each orphaned section for relocatable links.

2013-04-15  Cary Coutant  <ccoutant@google.com>

	* symtab.cc (Symbol_table::sized_write_globals): Subtract
	section starting address for relocatable link.
	* testsuite/Makefile.am (script_test_11): New test.
	* testsuite/Makefile.in: Regenerate.
	* testsuite/script_test_11.c: New source file.
	* testsuite/script_test_11.t: New linker script.

2013-04-13  Alan Modra  <amodra@gmail.com>

	* powerpc.cc (Stub_control::can_add_to_stub_group): Don't set
	owner when sections are not adjacent and exceed group size.